@@ -93,8 +93,9 @@ FORMAT_AGENT.add_spec(FormatSpec('NetCDF_v4',
                                  netcdf.load_cubes,
                                  priority=5))
 
-_nc_dap = FormatSpec('NetCDF OpenDAP',
-                     fp.URI_PROTOCOL,
+
+_nc_dap = FormatSpec('NetCDF OPeNDAP',
+                     fp.URI_PROTOCOL, 
                      lambda protocol: protocol in ['http', 'https'],
                      netcdf.load_cubes,
                      priority=6)
